--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logophrm.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="PHRM - Solution complète de gestion RH pour le Cameroun. Paie conforme CNPS, Recrutement, Background Check, Employee Self-Service." />
-    <meta name="keywords" content="RH, gestion paie, CNPS, Cameroun, recrutement, background check, employee self-service" />
+    <meta name="description" content="PHRM - Solution complète de gestion RH pour le Cameroun. Paie conforme CNPS, Recrutement, Vérification de CV, Employee Self-Service." />
+    <meta name="keywords" content="RH, gestion paie, CNPS, Cameroun, recrutement, vérification de CV, employee self-service" />
     <title>PHRM - Gestion RH Moderne pour le Cameroun</title>
   </head>
   <body>
